feat: integrate real AI microservice and remove frontend mocks